--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,4 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.modal {
+    transition: opacity 0.5s ease;
+}
+
+.modal-open {
+    filter: blur(3px);
+    -webkit-filter: blur(3px);
+    -moz-filter: blur(3px);
+}
+
+.modal-close {
+    filter: none;
+}
+
 
