[FIX] No pagination CSS

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,9 @@
 @import 'font-face.css';
+@import '~swiper/swiper.scss';
+@import '~swiper/components/navigation/navigation.scss';
+@import '~swiper/components/pagination/pagination.scss';
+@import '~swiper/components/scrollbar/scrollbar.scss';
+@import '~swiper/components/effect-fade/effect-fade.min.css';
 
 @tailwind base;
 @tailwind components;
